--- a/css/style.css
+++ b/css/style.css
@@ -8,38 +8,53 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	height: 100vh;
+	min-height: 100vh;
 	/* flex-direction: column; */
 	/* min-height: 100vh; */
 	font-family: 'Montserrat', sans-serif;
 	/* background-color: blue; */
+	background-image: url('https://cdn.pixabay.com/photo/2017/05/09/03/46/alberta-2297204_960_720.jpg');
+	Background-size: cover;
 }
 
 .form {
-	padding: 20px 40px;
+	padding: 40px;
 	width: 400px;
-	height: 500px;
+	/* height: 50vh; */
 	text-align: center;
-	box-shadow: 0 0 1em black;
+	font-size: 20px;
+	background-color: rgba(255, 255, 255, .35);
+	box-shadow: 0 0 10px black;
 }
 
 .form__title {
-	padding-top: 20px;
+	padding-bottom: 30px;
 }
 
 .form__box {
-	margin-top: 25px;
+	margin-bottom: 10px;
 	text-align: left;
 	display: flex;
 	flex-direction: column;
 }
 
+.label {
+    margin-bottom: 5px;
+}
+
 .input {
 	width: 100%;
+	padding: 8px;
+	font-size: 16px;
+	border: 1px solid rgb(200, 200, 200);
+	border-radius: 5px;
 }
 
 .error {
+	margin: 5px 0 0 10px;
+	font-size: 14px;
 	color: tomato;
+	visibility: hidden;
 }
 
 .form__buttons {
@@ -72,6 +87,7 @@ body {
 	background-color: rgb(0, 107, 194);
 }
 
+
 .popup {
 	position: absolute;
 	top: 150px;
@@ -83,11 +99,10 @@ body {
 	flex-direction: column;
 	width: 600px;
 	height: 200px;
-	background-color: #fff;
+	background-color: rgba(255, 255, 255, .55);
 	border: 2px solid black;
 	border-radius: 5px;
 	transition: top .5s;
-	
 }
 
 .popup__text {
@@ -96,7 +111,6 @@ body {
 
 .popup__btn {
 	margin-top: 20px;
-	
 }
 
 .popup__show {
